clang/test/BSC/Negative/Ownership/Borrow/borrow_field/borrow_field.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
union U1 {
    int a;
    int *_Borrow p; // expected-error {{type of union field cannot qualified by '_Borrow'}}
};

struct R {
    int *_Borrow p;
};
union U2 {
    struct R r;  // expected-error {{type of union field cannot qualified by '_Borrow'(even indirectly), 'struct R' contains '_Borrow' type}}
    int *_Borrow p; // expected-error {{type of union field cannot qualified by '_Borrow'}}
};

struct S {
  int num;
  int * _Owned p;
};

int * _Owned foo(int * _Owned a) {
    return a;
}
int * _Owned foo1() {
    struct S s;
    const struct S * _Borrow p1 = &_Const s;
    return p1->p;                // expected-error {{_Borrow type does not allow move ownership}}
}

int * _Owned foo2(){
  int a = 0;
  struct S s = {0, (int * _Owned)&a};
  struct S * _Owned b = (struct S * _Owned)&s;
  struct S * _Borrow p1 = &_Mut *b;
  int k = p1->num;
  int * _Owned l = p1->p;         // expected-error {{_Borrow type does not allow move ownership}}
  return p1->p;                  // expected-error {{_Borrow type does not allow move ownership}}
}

void struct S::f1(const This * _Borrow this) {}
void struct S::f2(This * _Borrow this) {}
void test() {
  struct S s;
  struct S * _Borrow p1 = &_Mut s;
  const struct S * _Borrow p2 = &_Const s;// expected-note {{variable 'p2' declared const here}} // expected-note {{variable 'p2' declared const here}}
  p2->num = 1; // expected-error {{cannot assign to variable 'p2' with const-qualified type 'const struct S *_Borrow'}}
  int a = p2->num; // legal
  a = p2->num; // legal

  p2->p = (int * _Owned)&a; // expected-error {{cannot assign to variable 'p2' with const-qualified type 'const struct S *_Borrow'}}
  int * _Owned b = p2->p; // expected-error {{_Borrow type does not allow move ownership}}
  b = p2->p; // expected-error {{_Borrow type does not allow move ownership}}

  p1->num = 1; // legal
  a = p1->num; // legal

  p1->p = (int * _Owned)&a; // legal
  b = p1->p; // expected-error {{_Borrow type does not allow move ownership}}

  foo(p1->p); // expected-error {{memory leak because temporary variable 'foo(p1->p)' is _Owned or indirect _Owned type, please fix it}}
              // expected-error@-1 {{_Borrow type does not allow move ownership}}
  p2->f1(); // legal
  p2->f2(); // expected-error {{incompatible conversion from const type 'const struct S *_Borrow' to non-const type 'struct S *_Borrow' in member function call}}
  p1->f1(); // legal
  p1->f2(); // legal
}